# ZLToolKit

./: .clang-format  .cproject  .gitignore  .project  .travis.yml  AUTHORS  CMakeLists.txt  LICENSE  README.md  build_for_android.sh  build_for_ios.sh  build_for_linux.sh  build_for_mac.sh
.github/: FUNDING.yml
.github/workflows/: cmake.yml  linux.yml  macos.yml  msvc-ci.yml  windows.yml
Debug/: makefile  objects.mk  sources.mk
Debug/src/: .gitignore  ZLToolKit.d  subdir.mk
Debug/src/Thread/: AsyncTaskThread.d  WorkThreadPool.d  subdir.mk
Debug/src/redox/: client.d  command.d  subdir.mk  subscriber.d
Debug/src/util/: AsyncTaskThread.d  SSLBox.d  SqlConnection.d  WorkThreadPool.d  subdir.mk
X64/: makefile  sources.mk
X64/src/Network/: subdir.mk
X64/src/Poller/: EventPoller.d  subdir.mk
X64/src/Thread/: AsyncTaskThread.d  WorkThreadPool.d  subdir.mk
X64/src/Util/: File.d  MD5.d  subdir.mk  util.d
bin_lib/win32/: ZLToolKit.lib
cmake/: FindLIBURING.cmake  FindMYSQL.cmake
project/ios/ZLToolKit.xcodeproj/: project.pbxproj
project/ios/ZLToolKit.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
project/ios/ZLToolKit.xcodeproj/project.xcworkspace/xcuserdata/xzl.xcuserdatad/: UserInterfaceState.xcuserstate
project/ios/ZLToolKit.xcodeproj/xcuserdata/xzl.xcuserdatad/xcschemes/: ZLToolKit.xcscheme  xcschememanagement.plist
project/ios/openssl/: opensslconf.h
src/: README.md  ZLToolKit.cpp
src/Http/: HeaderFields.hpp  Http.hpp  HttpBase.hpp  HttpClient.hpp  HttpHeaderBase.hpp  HttpMethod.hpp  HttpParser.cpp  HttpParser.hpp  HttpRequest.hpp  HttpResponse.hpp  HttpServer.cpp  HttpServer.hpp  HttpSession.cpp  HttpSession.hpp  HttpSplitter.cpp  HttpSplitter.hpp  HttpStatus.hpp  Url.cpp  Url.hpp
src/Http/Body/: AnyBody.hpp  JsonBody.hpp  StringBody.hpp
src/Http/impl/: rfc822-datetime.hpp
src/Network/: Buffer.cpp  Buffer.h  BufferSock.cpp  BufferSock.h  Kcp.cpp  Kcp.h  LengthTcpSession.cpp  LengthTcpSession.h  Server.cpp  Server.h  Session.cpp  Session.h  Socket.cpp  Socket.h  Socket.hpp  Socket_ios.mm  TcpClient.cpp  TcpClient.h  TcpLimitedSession.h  TcpServer.cpp  TcpServer.h  TcpSession.cpp  TcpSession.h  UdpClient.cpp  UdpClient.h  UdpServer.cpp  UdpServer.h  sockutil.cpp  sockutil.h
src/Poller/: EventPoller.cpp  EventPoller.h  EventPoller.hpp  Pipe.cpp  Pipe.h  Pipe.hpp  PipeWrap.cpp  PipeWrap.h  SelectWrap.cpp  SelectWrap.h  Timer.cpp  Timer.h  Timer.hpp
src/Session/: Session.h
src/Thread/: AsyncTaskThread.cpp  AsyncTaskThread.h  List.h  TaskExecutor.cpp  TaskExecutor.h  TaskQueue.h  TaskQueue.hpp  ThreadPool.cpp  ThreadPool.h  ThreadPool.hpp  WorkThreadPool.cpp  WorkThreadPool.h  non_lock_queue.hpp  rwmutex.h  semaphore.h  semaphore.hpp  spin_mutex.h  threadgroup.h  threadgroup.hpp
src/Util/: Byte.hpp  CMD.cpp  CMD.h  Entity.h  EntityMap.h  File.cpp  File.h  List.h  MD5.cpp  MD5.h  NoticeCenter.cpp  NoticeCenter.h  ResourcePool.h  RingBuffer.h  RingBuffer.hpp  SHA1.cpp  SHA1.h  SSLBox.cpp  SSLBox.h  SSLUtil.cpp  SSLUtil.h  SpeedStatistic.h  SqlConnection.cpp  SqlConnection.h  SqlPool.cpp  SqlPool.h  TimeTicker.h  Url.cpp  Url.hpp  base64.cpp  base64.h  function_traits.h  local_time.cpp  local_time.h  logger.cpp  logger.h  mini.cpp  mini.h  mini.hpp  onceToken.h  (+8 more)
src/redox/: client.cpp  client.hpp  command.cpp  command.hpp  redox.hpp  subscriber.cpp  subscriber.hpp
src/win32/: getopt.c
src/win32/sys/: epoll.h
tests/: CMakeLists.txt  test_asyncTaskThrad.cpp  test_creator.cpp  test_delayTask.cpp  test_eventPoller.cpp  test_http.cpp  test_ini.cpp  test_kcpClient.cpp  test_kcpEchoServer.cpp  test_kcpLantencyClient.cpp  test_logger.cpp  test_mask.cpp  test_non_block_queue.cpp  test_noticeCenter.cpp  test_pingpong.cpp  test_pipe.cpp  test_resourcePool.cpp  test_ringBuffer.cpp  test_rwmutex.cpp  test_semaphore.cpp  test_shell.cpp  test_spin_mutex.cpp  test_sql.cpp  test_ssl.cpp  test_string_view.cpp  test_tcpClient.cpp  test_tcpEchoServer.cpp  test_tcpLantencyClient.cpp  test_tcpLengthServer.cpp  test_threadPool.cpp  test_threadPoolBenchmark.cpp  test_timer.cpp  test_udpClient.cpp  test_udpEcho.cpp  test_udpEchoServer.cpp  test_udpLantencyClient.cpp  test_udpSock.cpp  test_udpSocketBufferConfig.cpp  test_uriparse.cpp  test_variant.cpp
